--- a/templates/index.html
+++ b/templates/index.html
@@ -20,17 +20,17 @@
             <div id="txt2" class="col align-self-center">Welcome<br>Falah Naufal Zaki</div>
         </div>
         <div class="row align-items-center">
-            <div class="col"></div>
+            <div class="col-sm-2"></div>
 
             <div class="md-form mt-0 col align-self-center" id="fakebox-container">
                 <form action="https://www.google.com/search" method="GET">
-                    <input id="input" class="form-control center" type="text" name="q" spellcheck="false" autocomplete="on" placeholder="Search" aria-label="Search" style="text-align: left;" aria-live="polite" autofocus>
+                    <input id="input" class="form-control center" type="text" name="q" spellcheck="false" autocomplete="off" placeholder="Search" aria-label="Search" style="text-align: left;" aria-live="polite" autofocus>
                     <input id="btn" type="submit">
                 </form>
                 
             </div>
             
-            <div class="col"></div>
+            <div class="col-sm-2"></div>
         </div>
         
 
