--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0px;
-    padding-top: 75px;
+    padding: 5px;
     overflow: hidden;
     /* background-image: linear-gradient(rgba(0, 0, 0, 0.050), rgba(0, 0, 0, 0.4)), url("https://lh6.googleusercontent.com/proxy/g3MNRR4S0VBk1KWmTem8W_eoNZkjk4v5AKsQ4tUYpp4_ISwDFXdLwYQVPklvs0FjC6gGCbi1TqTgB3YNS6qSV80X3LozHJYmmHImtTqinxPl=w3840-h2160-p-k-no-nd-mv"); opacity: 1; */
     /* background-image: url("https://lh6.googleusercontent.com/proxy/g3MNRR4S0VBk1KWmTem8W_eoNZkjk4v5AKsQ4tUYpp4_ISwDFXdLwYQVPklvs0FjC6gGCbi1TqTgB3YNS6qSV80X3LozHJYmmHImtTqinxPl=w3840-h2160-p-k-no-nd-mv"); */
@@ -10,16 +10,41 @@ body {
     background-position: center;
     opacity: 1;
     visibility: visible;
-
     -webkit-user-select: none;
     -moz-user-select: -moz-none;
     -ms-user-select: none;
     user-select: none;
+    z-index: 1;
 }
+
+
+.container{
+    margin: 0px;
+    padding: 5px;
+    z-index: 1;
+}
+
+
 .container-fluid{
     margin: 0px;
     padding: 0px;
+    z-index: 1;
 }
+
+#icon {
+    height: 75px;
+    width: 75px;
+    padding: 0px;
+    margin: 0px;
+    text-align: end;
+    float: right;
+}
+#card {
+    z-index: 2;
+    position: absolute;
+}
+
+
 
 #txt1 {
     text-align: center;
@@ -27,7 +52,7 @@ body {
     color: white;
     font-weight: 700;
     letter-spacing: 10px;
-    padding-top: 30px;
+    padding-top: 5px;
 }
 
 
