--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -31,13 +31,51 @@ body {
     z-index: 1;
 }
 
+#showCuaca {
+    padding-right: 20px;
+    padding-left: 20px;
+    text-align: center;
+    display: flex;
+    align-items: baseline;
+    flex-direction: row-reverse;
+}
+
+
+#suhu {
+    font-size: 30px;
+    color: white;
+    font-weight: 600;
+    margin: 0px;
+    padding-right: 20px;
+}
+
+.tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+   
+    position: absolute;
+    z-index: 4;
+    width: 120px;
+    top: 100%;
+    left: 50%;
+    margin-left: -60px;
+}
+  
+/* Show the tooltip text when you mouse over the tooltip container */
+.icon:hover .tooltiptext {
+    visibility: visible;
+}
+
 #icon {
     height: 75px;
     width: 75px;
     padding: 0px;
     margin: 0px;
-    text-align: end;
-    float: right;
 }
 #card {
     z-index: 2;
@@ -53,6 +91,8 @@ body {
     font-weight: 700;
     letter-spacing: 10px;
     padding-top: 5px;
+    min-width: 50%;
+    min-inline-size: 30px;
 }
 
 
@@ -63,6 +103,7 @@ body {
     color: white;
     font-size: 40px;
     font-weight: bold;
+    min-width: 50%;
 
 }
 
