--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -31,44 +31,16 @@ body {
     z-index: 1;
 }
 
-#showCuaca {
-    padding-right: 20px;
-    padding-left: 20px;
-    text-align: center;
-    display: flex;
-    align-items: baseline;
-    flex-direction: row-reverse;
+.nav {
+    padding-right: 40px;
+    padding-left: 40px;
 }
 
-
 #suhu {
-    font-size: 30px;
+    font-size: 35px;
     color: white;
     font-weight: 600;
     margin: 0px;
-    padding-right: 20px;
-}
-
-.tooltiptext {
-    visibility: hidden;
-    width: 120px;
-    background-color: black;
-    color: #fff;
-    text-align: center;
-    padding: 5px 0;
-    border-radius: 6px;
-   
-    position: absolute;
-    z-index: 4;
-    width: 120px;
-    top: 100%;
-    left: 50%;
-    margin-left: -60px;
-}
-  
-/* Show the tooltip text when you mouse over the tooltip container */
-.icon:hover .tooltiptext {
-    visibility: visible;
 }
 
 #icon {
